--- a/index1.html
+++ b/index1.html
@@ -11,7 +11,7 @@
 		
 		<div class="header">
 				<div class="container">
-					<h1>Наливанный Павел Викторович</h1>
+					<h1>Наливан ный ПGавел Викторович</h1>
 
 					<img src="foto1.jpg" width="135" height="135" alt="Paul Nalivanniy photo">
 
